@@ -1,5 +1,8 @@
 2006-06-24  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
 
+	* gobject/gobjectmodule.c (pyg_filename_from_utf8): Wrap
+	g_filename_from_utf8.
+
 	* tests/test_signal.py (TestClosures.testGString): Add unit test
 	for signals using the type TYPE_GSTRING.
 
